--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
           <div class='logo'><h4>Header Logo</h4></div>
           <div class="links">
             <div class='link1'><a>Link1</a></div>
-
             <div class='link2'><a>Link2</a></div>
-          
             <div class='link3'><a>Link3</a></div>
           </div>
         </div>
@@ -39,17 +37,16 @@
     
 
     <div class='header-container'>
-      <div class='header'>
-
-        <div class="title"><h3>Some random information.</h3></div>
-        <!--image-->
-        <div class="text1"><p>This is some subtext under an illustration or image.</p></div>
-        <!--image-->
-        <div class="text2"><p>This is some subtext under an illustration or image.</p></div>
-        <!--image-->
-        <div class="text3"><p>This is some subtext under an illustration or image.</p></div>
-        <!--image-->
-        <div class="text4"><p>This is some subtext under an illustration or image.</p></div>
+      <div class="title2"><h3>Some random information.</h3></div>
+        <div class='header1'>
+          <div class="box1"></div>
+          <div class="box2"></div>
+          <div class="box3"></div>
+          <div class="box4"></div>
+          <div class="text1"><p>This is some subtext under an illustration or image.</p></div>
+          <div class="text2"><p>This is some subtext under an illustration or image.</p></div>
+          <div class="text3"><p>This is some subtext under an illustration or image.</p></div>
+          <div class="text4"><p>This is some subtext under an illustration or image.</p></div>
 
         </div>
     </div>
